@@ -102,6 +102,7 @@ GType ccm_window_get_type (void) G_GNUC_CONST;
 CCMWindowPlugin* _ccm_window_get_plugin(CCMWindow *self, GType type);
 Window _ccm_window_get_child(CCMWindow* self);
 void _ccm_window_set_child(CCMWindow* self, Window child);
+gint _ccm_window_compare_layer(CCMWindow* self, CCMWindow* other);
 
 G_END_DECLS
 
