@@ -73,8 +73,8 @@ typedef enum
     CCM_STACK_LAYER_DESKTOP = 0,
     CCM_STACK_LAYER_BOTTOM = 1,
     CCM_STACK_LAYER_NORMAL = 2,
-    CCM_STACK_LAYER_TOP = 4,
     CCM_STACK_LAYER_DOCK = 4,
+    CCM_STACK_LAYER_TOP = 4,
     CCM_STACK_LAYER_FULLSCREEN = 5,
     CCM_STACK_LAYER_FOCUSED = 6,
     CCM_STACK_LAYER_LAST = 7
